--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Test_example_Git</string>
+    <string name="Hello_World">Hello From the DragonBoard!</string>
 </resources>
